--- a/apps/templates/base/about.html
+++ b/apps/templates/base/about.html
@@ -1,5 +1,30 @@
 {% extends "./base.html" %}
 
 {% block content %}
-  <p>Parted App - Music App</p>
+  <div class="prose lg:prose-xl mx-auto">
+    <h1 class="text-3xl font-bold">About Parted App</h1>
+    <div class="divider"></div>
+    <p class="py-2">Parted App - Music App for everyone</p>
+    <p class="py-2">Our mission is to connect music lovers with their favorite tunes and artists.</p>
+
+    <div class="stats stats-vertical lg:stats-horizontal shadow my-4">
+      <div class="stat">
+        <div class="stat-figure text-primary">
+          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" class="inline-block w-8 h-8 stroke-current"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z"></path></svg>
+        </div>
+        <div class="stat-title">Happy Users</div>
+        <div class="stat-value text-primary">25.6K</div>
+        <div class="stat-desc">21% more than last month</div>
+      </div>
+
+      <div class="stat">
+        <div class="stat-figure text-secondary">
+          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" class="inline-block w-8 h-8 stroke-current"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 10V3L4 14h7v7l9-11h-7z"></path></svg>
+        </div>
+        <div class="stat-title">Songs Played</div>
+        <div class="stat-value text-secondary">2.6M</div>
+        <div class="stat-desc">↗︎ 14% more than last month</div>
+      </div>
+    </div>
+  </div>
 {% endblock content %}
