--- a/apps/templates/account/password_reset.html
+++ b/apps/templates/account/password_reset.html
@@ -2,23 +2,23 @@
 
 {% load i18n %}
 
-{% block title %}{% trans "Password Reset" %}{% endblock %}
+{% block title %}{% translate "Password Reset" %}{% endblock %}
 
 {% block content %}
 <div class="max-w-md mx-auto">
-  <h1 class="text-3xl font-bold text-center mb-6">{% trans "Password Reset" %}</h1>
+  <h1 class="text-3xl font-bold text-center mb-6">{% translate "Password Reset" %}</h1>
   
   {% if user.is_authenticated %}
     <div class="alert alert-warning mb-6">
       <div>
         <svg xmlns="http://www.w3.org/2000/svg" class="stroke-current flex-shrink-0 h-6 w-6" fill="none" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 9v2m0 4h.01m-6.938 4h13.856c1.54 0 2.502-1.667 1.732-3L13.732 4c-.77-1.333-2.694-1.333-3.464 0L3.34 16c-.77 1.333.192 3 1.732 3z" /></svg>
-        <span>{% trans "You are already logged in." %}</span>
+        <span>{% translate "You are already logged in." %}</span>
       </div>
     </div>
   {% endif %}
   
   <p class="text-center mb-6">
-    {% trans "Forgotten your password? Enter your e-mail address below, and we'll send you an e-mail allowing you to reset it." %}
+    {% translate "Forgotten your password? Enter your e-mail address below, and we'll send you an e-mail allowing you to reset it." %}
   </p>
   
   <form method="POST" action="{% url 'account_reset_password' %}" class="password_reset card bg-base-100 shadow-xl">
@@ -35,7 +35,7 @@
       
       <div class="form-control">
         <label class="label" for="{{ form.email.id_for_label }}">
-          <span class="label-text">{% trans "Email" %}</span>
+          <span class="label-text">{% translate "Email" %}</span>
         </label>
         <input type="email" name="{{ form.email.html_name }}" placeholder="email@example.com" 
                id="{{ form.email.id_for_label }}" class="input input-bordered w-full" required
@@ -46,13 +46,13 @@
       </div>
       
       <div class="form-control mt-4">
-        <button class="btn btn-primary" type="submit">{% trans "Reset My Password" %}</button>
+        <button class="btn btn-primary" type="submit">{% translate "Reset My Password" %}</button>
       </div>
     </div>
   </form>
   
   <p class="text-center mt-6">
-    {% trans "Please contact us if you have any trouble resetting your password." %}
+    {% translate "Please contact us if you have any trouble resetting your password." %}
   </p>
 </div>
-{% endblock %}
+{% endblock content %}
