Decent looking login landing page

--- a/apps/templates/base/partials/menu_items.html
+++ b/apps/templates/base/partials/menu_items.html
@@ -1,7 +1,12 @@
 <li><a {% if btn_class %}class="{{ btn_class }}"{% endif %} href="{% url 'index' %}">Home</a></li>
 <li><a {% if btn_class %}class="{{ btn_class }}"{% endif %} href="{% url 'about' %}">About</a></li>
 {% if user.is_authenticated %}
-  <li><a {% if btn_class %}class="{{ btn_class }}"{% endif %} href="{% url 'account_logout' %}">Logout</a></li>
+  <li>
+    <form id="logout-form" action="{% url 'account_logout' %}" method="POST" {% if btn_class %}class="{{ btn_class }}"{% endif %}>
+        {% csrf_token %}
+      <button type="submit">Logout</button>
+    </form>
+  </li>
 {% else %}
   <li><a {% if btn_class %}class="{{ btn_class }}"{% endif %} href="{% url 'account_login' %}">Login</a></li>
 {% endif %}
