--- a/apps/templates/base.html
+++ b/apps/templates/base.html
@@ -92,7 +92,7 @@
 
     {# Content block to be overridden in child templates #}
     <main class="flex-grow container mx-auto mt-6 px-4 py-6">
-      {% include "base/partials/messages.html" %}
+      {% include "partials/messages.html" %}
       <div class="card bg-base-100 shadow-xl">
         <div class="card-body">
           {% block content %}
