--- a/apps/templates/pages/home_feed.html
+++ b/apps/templates/pages/home_feed.html
@@ -6,26 +6,26 @@
   <div class="space-y-8">
     <!-- New Artists Section -->
     {% include "components/artist_section.html" with
-    artists=artists
+    artists=latest_artists
     section_title="New Artists"
     view_more_link="#" %}
 
     <!-- Favorite Artists Section -->
     {% include "components/artist_section.html" with
-    artists=artists
+    artists=favorite_artists
     section_title="Favorite Artists"
     view_more_link="#" %}
 
     <!-- Trending Artists Section -->
     {% include "components/artist_section.html" with
-    artists=artists
-    section_title="Trending Artists"
-    badge="Trending"
+    artists=christian_artists
+    section_title="Christian Artists"
+    badge="Christian"
     view_more_link="#" %}
 
     <!-- Random Artists Section -->
     {% include "components/artist_section.html" with
-    artists=artists
+    artists=random_artists
     section_title="Random Artists"
     view_more_link="#" %}
   </div>
