--- a/apps/templates/components/artist_section.html
+++ b/apps/templates/components/artist_section.html
@@ -1,14 +1,20 @@
 <section>
   <div class="flex justify-between items-center mb-4">
     <h2 class="text-2xl font-bold">{{ section_title }}</h2>
-    <a href="{{ view_more_link }}" class="text-primary hover:text-primary-focus flex items-center">
-      View more
-      <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 ml-1" viewBox="0 0 20 20" fill="currentColor">
-        <path fill-rule="evenodd" d="M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 011.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z" clip-rule="evenodd" />
-      </svg>
-    </a>
+    {% if artists %}
+      <a href="{{ view_more_link }}" class="text-primary hover:text-primary-focus flex items-center">
+        View more
+        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 ml-1" viewBox="0 0 20 20" fill="currentColor">
+          <path fill-rule="evenodd" d="M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 011.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z" clip-rule="evenodd" />
+        </svg>
+    {% endif  %}
+      </a>
   </div>
 
-  {% include "components/artist_grid.html" with artists=artists %}
+  {% if artists %}
+    {% include "components/artist_grid.html" with artists=artists %}
+  {% else %}
+    <p class="text-2xl ml-8">You have no {{ section_title | lower }}. Go explore some!</p>
+  {% endif %}
 
 </section>
