Rename name urls to be consistent

--- a/apps/templates/base.html
+++ b/apps/templates/base.html
@@ -51,7 +51,7 @@
           <a class="btn btn-ghost" href="{% url 'account_login' %}">Login</a>
         {% else %}
           <!-- Alert Button -->
-          <a href="{% url 'news-feed' %}" class="btn btn-ghost btn-circle">
+          <a href="{% url 'news_feed' %}" class="btn btn-ghost btn-circle">
             <div class="indicator">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
